<resources>
    <string name="app_name">SplashScreen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Login Page</string>
    <string name="next">Login Fragment</string>
    <string name="previous">Go To the Home Fragment</string>
    <string name="signin">Sign In</string>
    <string name="social">or use one of your social profiles</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="fullnames">Full names</string>
    <string name="home_address">Home Address</string>
    <string name="contact">Contact</string>
    <string name="action_sign_up">Continue</string>
    <string name="account">Have an account?</string>
    <string name="empty_string">social media</string>
    <string name="auto_email">example@gmail.com</string>
    <string name="auto_fullnames">John Doe</string>
    <string name="auto_password">123#$%mom</string>
    <string name="auto_address">Nairobi</string>
    <string name="auto_contact">+254700000000</string>
    <string name="image">logo</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">moonyoin@gmail.com</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email">Email</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="next1">Continue</string>
    <string name="previous1">Previous</string>
    <string name="image1">image</string>
    <string name="careview">Careview</string>
    <string name="welcome">Welcome Careview is here to ensure that everyone can get quality,safe and affordable medicine and wellness products online
        <!--        Welcome Careview is here to ensure that everyone can get quality,safe and affordable medicine and wellness products online-->
    </string>
    <string name="message">company mesaage</string>
    <string name="gummy">Gummy Vitamins</string>
    <string name="VitC">Vitamin C</string>
    <string name="price1">Ksh 500</string>
    <string name="price2">Ksh 800</string>
    <string name="offers">OFFERS</string>
    <string name="start">Welcome to Pharma</string>

</resources>